--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -5,10 +5,5 @@
 /* toggle styling */
 input:checked ~ .dot {
     transform: translateX(100%);
-    background-color: #48bb78;
-  }
-
-  input:checked ~ .dot {
-    transform: translateX(100%);
-    background-color: #48bb78;
+    @apply bg-blue-300;
   }
