--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -5,5 +5,24 @@
 /* toggle styling */
 input:checked ~ .dot {
     transform: translateX(100%);
-    @apply bg-blue-300;
+    @apply bg-green-500;
   }
+
+.customer-table tbody tr:nth-child(even){
+    @apply bg-gray-50;
+}
+
+/* scrollbar */
+
+body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  @apply bg-gray-400;
+  @apply rounded-md;
+}
