--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -13,17 +13,58 @@ input:checked ~ .dot {
     @apply dark:bg-gray-700;
 }
 
-/* scrollbar */
-
-body::-webkit-scrollbar {
-  width: 1em;
+/* scrollbar after md screens*/
+@screen md {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: theme(colors.gray.500) theme(colors.gray.100);
+  }
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+  ::-webkit-scrollbar-track {
+    @apply bg-gray-100;
+    @apply dark:bg-gray-700;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: theme(colors.green.500);
+    border-radius: 6px;
+    border: 3px solid theme(colors.gray.100);
+  }
 }
 
-body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+.bid-ripple {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.bid-ripple div {
+  position: absolute;
+  @apply border-green-500;
+  border-width: 4px;
+  border-style: solid;
+  opacity: 1;
+  border-radius: 50%;
+  animation: bid-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.bid-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
 }
 
-body::-webkit-scrollbar-thumb {
-  @apply bg-gray-400;
-  @apply rounded-md;
+@keyframes bid-ripple {
+  0% {
+    top: 28px;
+    left: 28px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 58px;
+    height: 58px;
+    opacity: 0;
+  }
 }
